fix cyclic dependency between commands and audit libraries

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 3.5.8
    • Affects Version/s: None
    • Component/s: Security
    • None
    • Fully Compatible
    • ALL
    • Repl 2017-05-29, Repl 2017-06-19
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Some implementations of the audit function logCommandAuthzCheck() depend on a couple of generic Command functions (parseNs() and redactForLogging()). This introduces an implicit dependency on the 'commands' library where Command is defined, We have a cyclic dependency between the Command and logCommandAuthzCheck() because Command::checkAuthorization() calls logCommandAuthzCheck().

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Benety Goh (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: