SERVER-29314 add CommandInterface to break cyclic dependency between Command and audit implementations